--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,5 @@
-name: Package Application with Pyinstaller
+- name: PyInstaller Windows
+  uses: JackMcKew/pyinstaller-action-windows@v0.1.2
 
 on:
   push:
