--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,28 +1,27 @@
-name: Package Application with Pyinstaller
-
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [main]
+
+name: Upload Release Asset
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  build_windows:
+    name: Build .exe file
+    runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v2
-
-    - name: PyInstaller Windows
-      uses: JackMcKew/pyinstaller-action-windows@v0.1.2
-
-    - name: Package Application
-      uses: JackMcKew/pyinstaller-action-windows@main
-      with:
-        path: src
-
-    - uses: actions/upload-artifact@v2
-      with:
-        name: name-of-artifact
-        path: src/dist/windows
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Build project
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller
+          pyinstaller main.py --onefile
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: windows
+          path: ./dist/main.exe
