--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,7 +6,7 @@ name: Upload Release Asset
 
 jobs:
   build_windows:
-    name: Build .exe file
+    name: Build Windows
     runs-on: windows-latest
     steps:
       - name: Set up Python 3.x
@@ -19,9 +19,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
-          pyinstaller main.py --onefile
+          pip3 install customtkinter
+          pyinstaller main.py --onedir --noconsole --add-data "customtkinter;customtkinter"
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: windows
-          path: ./dist/main.exe
+          path: ./dist/main/
