--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
-          pip3 install customtkinter
+          pip3 install customtkinter==5.2
           pyinstaller main.py --onedir --noconsole --add-data "customtkinter;customtkinter"
       - name: Upload artifact
         uses: actions/upload-artifact@v2
